[#11] feat: 유튜브 영상 정보 제공 기능 구현
- 영상 정보를 저장하는 모델을 추가합니다.
- 영상 정보들을 조회할 수 있는 API를 추가합니다.
- 해당 API 문서화 관련 코드도 추가합니다.
